# videolizer

./: README.md  pyproject.toml  requirements.txt
docs/: README.md  TTS.md
videolizer/: __init__.py  cli.py  content.py  fix_chatterbox.py  subtitles.py  voiceover.py
